<resources>
    <string name="app_name">HotelSphere</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup_login">Login</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="insert_hotel">Insert hotel</string>
    <string name="select_image">Select Image</string>
    <string name="location">Location</string>
    <string name="price">price</string>
    <string name="person">person</string>
    <string name="room_types">Room types</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="insert_hotell">Insert Hotel!</string>
    <string name="to_update_search_a_hotel_by_name">To update search a hotel by name</string>
    <string name="search">Search</string>
    <string name="update_hotel">Update Hotel</string>
</resources>